--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <!--A canvas element and img element as fallback-->
-  <canvas id="canvas">
+  <!-- It's preferable to put the dimension inside the elements -->
+  <canvas id="canvas" style="width: 150; height: 150">
     <img src="" alt="canvas not supported">
   </canvas>
   <script src="./index.js"></script>
